objects/coustmobject_1__c.object
<CustomObject>
    <fields>
        <fullName>coustmfield_objectname__c</fullName>
        <description>this is the order name</description>
        <label>coustmfield _objectname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demo_test123321__c</fullName>
        <label>demo test123321</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>obj1_feild2__c</fullName>
        <label>obj1-feild2</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_date123321__c</fullName>
        <label>test date123321</label>
        <type>Date</type>
    </fields>
    <label>coustmobject_1</label>
    <nameField>
        <label>coustmobject_1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>coustmobject_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>